--- a/src/components/tips/Tip.css
+++ b/src/components/tips/Tip.css
@@ -6,3 +6,9 @@
     width: 100%;
     height: 360px;
 }
+.big-string {
+    max-width: 15ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
