--- a/src/components/template/Header.css
+++ b/src/components/template/Header.css
@@ -9,3 +9,10 @@ header.header {
 header.header h1 {
     font-size: 1.8em;
 }
+
+.big-string {
+    max-width: 20ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
