--- a/src/components/template/Logo.css
+++ b/src/components/template/Logo.css
@@ -1,5 +1,5 @@
 aside.logo {
-    background: #451246;
+    background: #89C5C6;
     display: flex;
     justify-content: center;
     align-items: center;
