--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -5,7 +5,7 @@
   float: left;
   padding: 60px 50px 40px 50px;
   width: 100%;
-  background: #fff;
+  background: #eaf2ed;
   border-radius: 10px;
   transform: scale(1);
   -webkit-transform: scale(1);
